--- a/NB-IoTUtility20180206/res/layout/fragment5.xml
+++ b/NB-IoTUtility20180206/res/layout/fragment5.xml
@@ -36,7 +36,7 @@
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="1"
-		            android:text="INDEX"
+		            android:text="AT+CSQ"
 		            android:textColor="#3211dd"
 		            android:background="#1b1b1b"
 		             > 
@@ -115,10 +115,9 @@
 
 			</TableLayout>
      <TextView
-        android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#eee"
+        android:textColor="#aaa"
         android:textSize="20sp"
         android:text="(提醒:扰码配置需重新上电。)" />   
 </LinearLayout>
