--- a/NB-IoTUtility20180206/res/layout/fragment3.xml
+++ b/NB-IoTUtility20180206/res/layout/fragment3.xml
@@ -384,25 +384,27 @@
         android:orientation="horizontal" >
         
         <ImageView
+            	android:id="@+id/ivPhoto"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:baseline="30dp"
-                    android:src="@drawable/poc"/>
+                    android:src="@drawable/poc"
+                    />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnF3TakePhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="采相" />
+            android:text="采像" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnF3Positioning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="定位" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnF3Upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="上报" />
