--- a/NB-IoTUtility20180206/res/layout/fragment2.xml
+++ b/NB-IoTUtility20180206/res/layout/fragment2.xml
@@ -16,6 +16,9 @@
         android:textSize="22sp" />
      <ScrollView
          android:id="@+id/scrollView1"
+         android:layout_marginTop="5sp"
+         android:layout_marginLeft="5sp"
+         android:layout_marginRight="5sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" >
     <LinearLayout
@@ -69,7 +72,7 @@
         android:orientation="horizontal" >
 
         <Button
-
+			android:id="@+id/btnF2eDRX"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -78,7 +81,7 @@
             android:text="eDRX配置" />
 
         <Button
-
+			android:id="@+id/btnF2PSM"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -86,7 +89,7 @@
             android:textColor="#bbb"
             android:text="PSM配置" />
         <Button
-
+			android:id="@+id/btnF2QueryAPN"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -95,7 +98,7 @@
             android:text="查询APN" />
 
         <Button
-
+			android:id="@+id/btnF2QueryPLMN"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -109,16 +112,16 @@
         android:orientation="horizontal" >
 
         <Button
-
+			android:id="@+id/btnF2QueryAttach"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:textSize="12sp"
             android:textColor="#bbb"
-            android:text="查询状态" />
+            android:text="查询附着" />
 
         <Button
-
+			android:id="@+id/btnF2QueryIMSI"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -126,7 +129,7 @@
             android:textColor="#bbb"
             android:text="查询IMSI" />
         <Button
-
+            android:id="@+id/btnF2QueryIMEI"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -135,7 +138,7 @@
             android:text="查询IMEI" />
 
         <Button
-
+			android:id="@+id/btnF2QueryCSQ"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -150,7 +153,6 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -165,7 +167,6 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/tvNetwork"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
@@ -173,7 +174,7 @@
                     android:textSize="12sp"
                     android:text="PLMN:" />
                 <EditText
-		            android:id="@+id/editText1"
+		            android:id="@+id/etF2PLMN"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
 		          android:layout_weight="1"
@@ -198,7 +199,6 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/tvNetwork"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
@@ -206,7 +206,7 @@
                     android:textSize="12sp"
                     android:text="APN:" />
                 <EditText
-		            android:id="@+id/editText1"
+		            android:id="@+id/etF2APN"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
 		          android:layout_weight="1"
@@ -216,7 +216,7 @@
 		             > 
 					</EditText>
 	        <Button
-	            android:id="@+id/btnF2ManualCfgNet"
+	            android:id="@+id/btnF2CfgAPN"
 	            android:layout_width="fill_parent"
 	            android:layout_height="50dp"
 	            android:layout_weight="2"
@@ -231,7 +231,6 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/tvNetwork2"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="#828282"
@@ -243,7 +242,7 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/btnF2Attach"
+            android:id="@+id/btnF2AutoMode"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -252,7 +251,7 @@
             android:text="AUTO模式" />
 
         <Button
-            android:id="@+id/btnF2Detach"
+            android:id="@+id/btnF2GsmOnly"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -260,7 +259,7 @@
             android:textSize="12sp"
             android:text="GSM ONLY" />
         <Button
-            android:id="@+id/btnF2EnablePPP"
+            android:id="@+id/btnF2LteOnly"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -269,13 +268,13 @@
             android:text="LTE ONLY" />
 
         <Button
-            android:id="@+id/btnF2DisablePPP"
+            android:id="@+id/btnF2GsmLte"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:textColor="#bbb"
             android:textSize="12sp"
-            android:text="GSM LTE" />
+            android:text="GSM和LTE" />
     </LinearLayout>
            
             </LinearLayout>
@@ -286,51 +285,277 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/tvNetwort3"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="#828282"
                     android:layout_weight="1"
                     android:text="LTE搜索模式:" />
-   <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal" >
+				   <LinearLayout
+				        android:layout_width="fill_parent"
+				        android:layout_height="60dp"
+				        android:orientation="horizontal" >
+				
+				        <Button
+				            android:id="@+id/btnF2LteCatm1Only"
+				            android:layout_width="fill_parent"
+				            android:layout_height="50dp"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:textColor="#bbb"
+				            android:text="LTE CatM1 only" />
+				
+				        <Button
+				            android:id="@+id/btnF2LteNBOnly"
+				            android:layout_width="fill_parent"
+				            android:layout_height="50dp"
+				            android:layout_weight="1"
+				            android:textColor="#bbb"
+				            android:textSize="12sp"
+				            android:text="LTE NB only" />
+				        <Button
+				            android:id="@+id/btnF2LteBoth"
+				            android:layout_width="fill_parent"
+				            android:layout_height="50dp"
+				            android:layout_weight="1"
+				            android:textColor="#bbb"
+				            android:textSize="12sp"
+				            android:text="LTE CatM1 and NB" />
+				    </LinearLayout>
+     		</LinearLayout>
+     		
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="#626262"
+                android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/btnF2Attach"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:textSize="12sp"
-            android:textColor="#bbb"
-            android:text="LTE CatM1 only" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#828282"
+                    android:layout_weight="1"
+                    android:text="TCP数据业务:" />
+				   <LinearLayout
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"
+				        android:orientation="horizontal" >
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="SERVER:" />
+		                <EditText
+		                    android:id="@+id/etF2TCPServerIP"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:textColor="#dc8242"
+				            android:text="139.196.113.149"
+				             > 
+							</EditText>      
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="PORT:" />
+		                <EditText
+		                    android:id="@+id/etF2TCPServerPORT"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:textColor="#dc8242"
+				            android:text="8080"
+				             > 
+							</EditText>  
+				    </LinearLayout>
+				   <LinearLayout
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"
+				        android:orientation="vertical" >
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="接收数据:" />
+		                <TextView
+		                    android:id="@+id/etF2TCPRecvMsg"
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="60dp"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:background="#222"
+		                    android:textSize="12sp"
+		                    android:text="" />      
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="发送数据:" />
+		                <EditText
+		                    android:id="@+id/etF2TCPTxData"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:background="#222"
+				            android:textColor="#ddccbb"
+				            android:text="TX DATA"
+				             > 
+							</EditText>  
+				    </LinearLayout>
+		            <LinearLayout
+		                 android:layout_width="fill_parent"
+		                android:layout_height="wrap_content"
+		                android:orientation="horizontal"
+		                  >             
+						        <Button
+						            android:id="@+id/btnF2TCPConnect"
+						            android:layout_width="fill_parent"
+						            android:layout_height="50dp"
+						            android:layout_weight="1"
+						            android:textColor="#bbb"
+						            android:textSize="12sp"
+						            android:text="连接" />
+						        <Button
+						            android:id="@+id/btnF2TCPSend"
+						            android:layout_width="fill_parent"
+						            android:layout_height="50dp"
+						            android:layout_weight="1"
+						            android:textColor="#bbb"
+						            android:textSize="12sp"
+						            android:text="发送数据" />
+						        
+		             </LinearLayout>
+             
+     		</LinearLayout>
+             <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="#626262"
+                android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/btnF2Detach"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:textColor="#bbb"
-            android:textSize="12sp"
-            android:text="LTE CatM1 only" />
-        <Button
-            android:id="@+id/btnF2EnablePPP"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:textColor="#bbb"
-            android:textSize="12sp"
-            android:text="LTE CatM1 only" />
-    </LinearLayout>
-     </LinearLayout>
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#828282"
+                    android:layout_weight="1"
+                    android:text="UDP数据业务:" />
+				   <LinearLayout
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"
+				        android:orientation="horizontal" >
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="SERVER:" />
+		                <EditText
+		                    android:id="@+id/etF2UDPServerIP"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:textColor="#dc8242"
+				            android:text="139.196.113.149"
+				             > 
+							</EditText>      
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="PORT:" />
+		                <EditText
+		                    android:id="@+id/etF2UDPPort"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:textColor="#dc8242"
+				            android:text="8080"
+				             > 
+							</EditText>  
+				    </LinearLayout>
+				   <LinearLayout
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"
+				        android:orientation="vertical" >
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="接收数据:" />
+		                <TextView
+		                    android:id="@+id/tvF2UDPRxData"
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="60dp"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:background="#222"
+		                    android:textSize="12sp"
+		                    android:text="" />      
+		                <TextView
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:layout_weight="1"
+		                    android:textColor="#ddd"
+		                    android:textSize="12sp"
+		                    android:text="发送数据:" />
+		                <EditText
+		                    android:id="@+id/etF2UDPTxData"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_weight="1"
+				            android:textSize="12sp"
+				            android:background="#222"
+				            android:textColor="#ddccbb"
+				            android:text="TX DATA"
+				             > 
+							</EditText>  
+				    </LinearLayout>
+		            <LinearLayout
+		                 android:layout_width="fill_parent"
+		                android:layout_height="wrap_content"
+		                android:orientation="horizontal"
+		                  >             
+						        <Button
+						            android:id="@+id/btnF2UDPConnect"
+						            android:layout_width="fill_parent"
+						            android:layout_height="50dp"
+						            android:layout_weight="1"
+						            android:textColor="#bbb"
+						            android:textSize="12sp"
+						            android:text="连接" />
+						        <Button
+						            android:id="@+id/btnF2UDPSend"
+						            android:layout_width="fill_parent"
+						            android:layout_height="50dp"
+						            android:layout_weight="1"
+						            android:textColor="#bbb"
+						            android:textSize="12sp"
+						            android:text="发送数据" />
+						        
+		             </LinearLayout>
+             
+     		</LinearLayout>    		
  </LinearLayout>
 
-     <ImageView
-         android:id="@+id/imageView1"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:src="@drawable/poc" />
+
 </LinearLayout> 
  </ScrollView>
 
